--- a/test2/Areas/Frontend/Views/Shared/_Partial/_clientBorrow.cshtml
+++ b/test2/Areas/Frontend/Views/Shared/_Partial/_clientBorrow.cshtml
@@ -4,7 +4,7 @@
     var client = Model.FirstOrDefault();
 }
 
-<div class="container" style="width:90vw">
+<div class="container" style="width:100%">
     <!-- 租借資訊 -->
     <!-- 租借項目|抬頭 -->
     <div class="container-fluid card col-8 shadow-lg rounded-5 p-5" style="width:100%">
