--- a/test2/Areas/Frontend/Views/Home/Client.cshtml
+++ b/test2/Areas/Frontend/Views/Home/Client.cshtml
@@ -22,6 +22,9 @@
                 <button class="nav-link flex-grow-1" id="btn-tab2" data-bs-toggle="pill" data-bs-target="#tab2" type="button" role="tab">
                     預約紀錄
                 </button>
+                <button class="nav-link flex-grow-1" id="btn-tab6" data-bs-toggle="pill" data-bs-target="#tab6" type="button" role="tab">
+                    活動報名紀錄
+                </button>
                 <button class="nav-link flex-grow-1" id="btn-tab3" data-bs-toggle="pill" data-bs-target="#tab3" type="button" role="tab">
                     歷史紀錄
                 </button>
@@ -39,7 +42,7 @@
     </div>
 
     <!-- 右側 內容 -->
-    <div class="content container-fluid" style="margin-right: 5vw">
+    <div class="content container-fluid">
         <div class="tab-content" id="sidebarTabsContent">
             <div class="tab-pane active" id="tab0" role="tabpanel">
                 @await Html.PartialAsync("~/Areas/Frontend/Views/Shared/_Partial/_clientHome.cshtml")
@@ -55,6 +58,9 @@
             </div>
             <div class="tab-pane" id="tab4" role="tabpanel">
                 @await Html.PartialAsync("~/Areas/Frontend/Views/Shared/_Partial/_clientMesg.cshtml")
+            </div>
+            <div class="tab-pane" id="tab6" role="tabpanel">
+                @await Html.PartialAsync("~/Areas/Frontend/Views/Shared/_Partial/_clientParticipations.cshtml")
             </div>
         </div>
     </div>
