--- a/test2/Areas/Frontend/Views/Shared/_Partial/_clientFav.cshtml
+++ b/test2/Areas/Frontend/Views/Shared/_Partial/_clientFav.cshtml
@@ -4,8 +4,8 @@
     var client = Model.FirstOrDefault();
 }
 
-<div class="container" style="width:90vw">
-    <div class="container-fluid card col-8 shadow-lg rounded-5 p-5" style="width:100%">
+<div class="container">
+    <div class="container-fluid card col-8 shadow-lg rounded-5 p-5 w-100">
         <table class="table table-striped table-hover align-middle" style="table-layout: fixed;">
             <thead class="table-light text-center">
                 <tr>
