--- a/test2/Areas/Frontend/Views/Shared/_Partial/_clientHome.cshtml
+++ b/test2/Areas/Frontend/Views/Shared/_Partial/_clientHome.cshtml
@@ -7,7 +7,7 @@
     var userName = ViewData["Name"];
 }
 
-<div class="container text-center" style="width:90vw">
+<div class="container text-center">
     <div class="p-4 rounded-3">
 
         <h1 class="text-black">
