--- a/test2/Areas/Frontend/Views/Shared/_Partial/_clientMesg.cshtml
+++ b/test2/Areas/Frontend/Views/Shared/_Partial/_clientMesg.cshtml
@@ -6,18 +6,18 @@
 
 <div class="container">
     <div class="container-fluid card col-8 shadow-lg rounded-5 p-5 w-100">
-        <table class="table table-striped table-hover align-middle" style="table-layout: fixed;">
+        <table class="table table-striped table-hover align-middle text-center" style="table-layout: fixed;">
             <colgroup>
                 <col style="width: 20%;">
                 <col style="width: 80%;">
             </colgroup>
-            <thead class="table-light text-start">
+            <thead class="table-light">
                 <tr>
                     <th>通知日期</th>
                     <th>通知內容</th>
                 </tr>
             </thead>
-            <tbody class="text-start">
+            <tbody>
                 @foreach (var message in client!.Notifications.Reverse())
                 {
                     <tr>
